# ironmark

./: .gitignore  .npmignore  .oxlintrc.json  .releaserc.cjs  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  playground.yml  release.yml
benchmark/: parse.rs  report.mjs  results.html
playground/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
playground/src/: App.tsx  main.ts  main.tsx  playground.ts  style.css
playground/src/components/: Header.tsx  MarkdownEditor.tsx  MobileTabs.tsx  OutputTabs.tsx  SplitPanels.tsx  tabs.ts  types.ts
playground/src/editor/: highlight.ts  setup.ts  theme.ts
playground/src/layout/: app.ts  tabs.ts
playground/src/util/: format-html.ts
src/: ast.rs  html.rs  lib.rs  render.rs
src/block/: html_block.rs  leaf_blocks.rs  link_ref_def.rs  mod.rs  parser.rs
src/entities/: data.rs  mod.rs
src/inline/: links.rs  mod.rs  render.rs  scanner.rs
tests/: commonmark_spec.rs  parser.rs
wasm/: Cargo.toml  build.mjs  index.d.ts  index.js  shared.js  web.js
wasm/src/: lib.rs
